styles fixes are added

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ table {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     border: 3px solid #000;
     vertical-align: middle;
+    /* box-shadow: 10px 10px 10px #898282 */
 }
 
 th {
@@ -164,7 +165,8 @@ th.side-col:nth-child(5) {
 .voting_btn {
     background-color: #304FFE;
     color: white;
-    padding: 14px 27px;
+    /*  padding: 14px 27px; */
+    padding: 10px 15px;
     border-radius: 20px;
     cursor: pointer;
     border: none;
@@ -339,22 +341,16 @@ th.side-col:nth-child(5) {
 @media (max-width: 576px) {
     .vvpat-overlay {
         padding-top: 20px;
-        /* Add some padding to prevent it from being flush against the top */
         align-items: center;
-        /* Center the modal vertically if needed */
         justify-content: center;
-        /* Center the modal horizontally */
     }
 
     .vvpat-modal {
         width: 100%;
         max-width: 90%;
-        /* Ensure it doesn't overflow the viewport */
         margin: auto;
-        /* Center the modal */
-    } }
+    }
 
-@media (max-width: 576px) {
     .ballot-slip {
         width: 120px;
         height: 170px;
@@ -377,7 +373,22 @@ th.side-col:nth-child(5) {
     .slip-name {
         font-size: 12px;
     }
+
+    /* bug fixes */
+    .container {
+        padding: 0px;
+    }
+
+    .d-flex {
+        padding-left: 0;
+    }
+
+    th.p-2 {
+        font-size: 15px;
+    }
+
 }
+
 
 @media (max-width: 576px) {
 
