--- a/css/style.css
+++ b/css/style.css
@@ -451,8 +451,7 @@ th.side-col:nth-child(5) {
 }
 
 @media screen and (max-width: 414px) {
-    table.table.table-bordered.border-dark {
-        overflow-x: scroll;
-        overflow: auto;
+    .body {
+        padding: 5px;
     }
 }
