--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ th.side-col:nth-child(5) {
 }
 
 @media screen and (max-width: 414px) {
-    .body {
+    body {
         padding: 5px;
     }
 }
