Adding new features

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .stimulated-polls-header {
-    background-color: #7fb3e8;
+    background-color: #2c2c8c;
     color: #fff;
     padding: 15px 20px;
     border-radius: 12px;
@@ -93,6 +93,7 @@ body {
     font-weight: bold;
     color: #ffffff;
     border-radius: 5px;
+    margin-bottom: 25px;
 }
 
 .d-flex {
@@ -109,6 +110,38 @@ body {
     box-shadow: 2px 3px 3px #1b1a1a45;
 }
 
+
+.shadow-wrapper {
+    width: 100%;
+    position: relative;
+    /* display: inline-block; */
+    padding: 15px 15px 15px 0;
+    background-color: transparent;
+    box-shadow:
+        4px -4px 8px rgba(0, 0, 0, 0.1),
+        4px 8px 15px rgba(0, 0, 0, 0.15),
+        12px 0 25px rgba(0, 0, 0, 0.25);
+    border-radius: 32px;
+}
+
+.parallelogram {
+    position: absolute;
+    width: 45px;
+    height: 15px;
+    background-color: #1E4E9C;
+    transform: skew(-20deg);
+    z-index: 1;
+}
+
+.parallelogram.top {
+    top: -0%;
+    right: 10%;
+}
+
+.parallelogram.bottom {
+    bottom: -0%;
+    right: 10%;
+}
 
 table {
     width: 100%;
@@ -300,7 +333,7 @@ th.side-col:nth-child(5) {
     padding: 20px 10px;
     align-items: center;
     padding: 10px 20px;
-    background-color: #7fb3e8;
+    background-color: #2c2c8c;
     color: white;
     font-size: 14px;
     border-top: 1px solid #ddd;
@@ -321,6 +354,23 @@ th.side-col:nth-child(5) {
 }
 
 @media (max-width: 576px) {
+    .container {
+        padding: 0px;
+    }
+
+    .d-flex {
+        padding-left: 0;
+    }
+
+    th.p-2 {
+        font-size: 15px;
+    }
+
+    .stimulated-polls-header {
+        font-size: 14px;
+        padding: 5px;
+    }
+
     .action-buttons {
         flex-direction: column;
         gap: 10px;
@@ -332,54 +382,12 @@ th.side-col:nth-child(5) {
         width: 100%;
     }
 
-    .voting_btn {
-        font-size: 13px;
-        padding: 18px 30px;
-    }
-}
-
-@media (max-width: 576px) {
-    .vvpat-overlay {
-        padding-top: 20px;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .vvpat-modal {
-        width: 100%;
-        max-width: 90%;
-        margin: auto;
-    }
-
-    .ballot-slip {
-        width: 120px;
-        height: 170px;
-        top: 70% !important;
-        left: 50%;
-        transform: translate(-50%, -100%);
-    }
-
-    .slip {
-        width: 160px;
-        height: 240px;
-    }
-
-    #slip-photo,
-    .slip-symbol {
-        width: 30px;
-        height: 30px;
-    }
-
-    .slip-name {
-        font-size: 12px;
-    }
-
     table {
         width: 70%;
         font-size: 9px;
         font-weight: bold;
-        overflow-x: auto;
-        /* display: block; */
+        overflow: hidden;
+        border-radius: 12px 0 0 12px;
     }
 
     thead {
@@ -415,8 +423,8 @@ th.side-col:nth-child(5) {
     }
 
     /* td.name {
-            width: 90px;/
-        } */
+                width: 90px;/
+            } */
 
     td.button {
         width: 100px;
@@ -430,24 +438,46 @@ th.side-col:nth-child(5) {
         min-width: 50px;
     }
 
+    .vvpat-overlay {
+        padding-top: 20px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .vvpat-modal {
+        width: 100%;
+        max-width: 90%;
+        margin: auto;
+    }
+
+    .ballot-slip {
+        width: 92px;
+        height: 127px;
+        top: 64% !important;
+        left: 51%;
+        transform: translate(-50%, -100%);
+    }
+
+    .slip-heading {
+        font-size: 8px;
+    }
+
+    #slip-photo,
+    .slip-symbol {
+        width: 20px;
+        height: 20px;
+    }
+
+    .slip-name {
+        font-size: 8px;
+    }
+
+
+
     .footer-center,
     .footer-bottom {
         font-size: 13px;
     }
-
-    /* bug fixes */
-    .container {
-        padding: 0px;
-    }
-
-    .d-flex {
-        padding-left: 0;
-    }
-
-    th.p-2 {
-        font-size: 15px;
-    }
-
 }
 
 @media screen and (max-width: 414px) {
